# LatticeRT

./: .gitignore  COMMERCIAL-LICENSE.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  standalone.html
.github/workflows/: tauri-windows-release.yml
docs/: index.md
gate/: check-registration.html  index.html  register.html
licenses/: ISC-earcut.txt  MIT-dicom-parser.txt  MPL-2.0.txt
react/: package-lock.json  package.json
react/src/: App.css  dcmjs.d.ts  main.tsx  types.ts
react/src/components/: App.tsx  Dropzone.tsx  Sidebar.tsx  Viewport2D.tsx  Viewport3D.tsx
react/src/lib/: math.ts
react/src/lib/dicom/: export.ts  loader.ts
react/src/lib/geometry/: analysis.ts  contours.ts  coords.ts  layeredCake.ts
react/src/lib/lattice/: analysis.ts  flow.ts  generation.ts  support.ts  utils.ts
react/src/lib/math/: dt.ts  mat4.ts
react/src/lib/viewer/: CtRenderer2D.ts  Viewer3D.ts  overlayDraw.ts
react/src/lib/volume/: mpr.ts
react/src/store/: useAppStore.ts
scripts/: build-standalone.mjs  build-standalone.py  build-tauri.mjs  serve.mjs
src/: app.js  orientationWidget.js  viewer3d.js
src-tauri/: Cargo.toml  tauri.conf.json
