[package]
name = "sfrt_sphere_lattice"
version = "0.1.0"
description = "SFRT Sphere Lattice desktop app"
authors = ["SFRT Sphere Lattice"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata]
tauri = {}
